# EcoSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
configs/: app.toml  scenario.toml
docs/: architectural_constraints.md  architecture_overview.md  full_program_structure.md  modules_and_functions.md
modules/agent_behavoir/: manifest.toml
modules/recorder/: manifest.toml
src/: main.cpp
src/core/: app.cpp  app.h  config.cpp  config.h  console.cpp  console.h  event_bus.cpp  event_bus.h  logger.cpp  logger.h  module.cpp  module.h  module_manager.cpp  module_manager.h  module_registry.cpp  module_registry.h  scenario.cpp  scenario.h
src/modules/: agent_behavoir.cpp  agent_behavoir.h  recorder_csv.cpp  recorder_csv.h  scenario_runner.cpp  scenario_runner.h  simulation_world.cpp  simulation_world.h  world_port.h
tests/: integration_tests.cpp  test_event_delivery.cpp  test_modules_start.cpp  test_scenario_results.cpp  test_start_order.cpp  test_support.h
tests/data/: app_base.toml  app_missing_important.toml  scenario.toml
tests/data/modules/important_missing/: manifest.toml
tests/data/modules/recorder/: manifest.toml
tests/data/modules/scenario/: manifest.toml
tests/data/modules/simulation_world/: manifest.toml
tests/integration/: run_integration_tests.cpp  test_1_dependency_resolution.cpp  test_2_spawn_phase.cpp  test_3_event_buffering.cpp  test_4_stop_condition.cpp  test_5_recorder_isolation.cpp  test_6_reproducibility.cpp  test_cases.cpp  test_cases.h  test_framework.cpp  test_framework.h
